sharing updated code to repo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
-    "dev": "vite",
+    "dev":"vite",
+    // "dev": "vite --port 3000 --host --open",
     "build": "vite build",
     "preview": "vite preview"
   },
