--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
-    "dev":"vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -24,5 +24,8 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
+  },
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4"
   }
 }
